--- a/character/package.json
+++ b/character/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "fs": "^0.0.1-security",
     "graphql-request": "^7.1.2"
   }
 }
